[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-kirokuforms"
version = "0.1.0"
description = "Human-in-the-Loop integration between LangGraph and KirokuForms"
readme = "README.md"
authors = [
    {name = "KirokuForms Team", email = "info@kirokuforms.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "langgraph>=0.0.15",
]

[project.urls]
Homepage = "https://github.com/ChelseaAIVentures/langgraph-kirokuforms"
Repository = "https://github.com/ChelseaAIVentures/langgraph-kirokuforms.git"

[tool.setuptools]
py-modules = ["kirokuforms"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
]
